demoK8s-2/k8s/k8s-fools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-fool
  labels:
    env: prod
    app: main
    tier: backend
    owner: alex
spec:
  selector:
    matchLabels:
      project: fool  #service with look for those PODS Labels
  template:
    metadata:
      labels:
        project: fool
    spec:
      containers:
        - name: service-fool
          image: nelson9291/service-fool:1.0
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: service-fool
  labels:
    env: prod
spec:
  selector:
    project: fool  #selecting PODS with those Labels
  ports:
    - name: app-fool
      protocol: TCP
      port: 8082 #port loadBalancer
      targetPort: 8082 #port pod
