demoK8s-2/k8s/k8s-friend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-friend
  labels:
    env: prod
    app: main
    tier: backend
    owner: alex
spec:
  selector:
    matchLabels:
      project: friends  #service with look for those PODS Labels
  template:
    metadata:
      labels:
        project: friends
    spec:
      containers:
        - name: service-friend
          image: nelson9291/service-friend:1.0
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: service-friend
  labels:
    env: prod
spec:
  selector:
    project: friends  #selecting PODS with those Labels
  ports:
    - name: app-friend
      protocol: TCP
      port: 8081 #port loadBalancer
      targetPort: 8081 #port pod
