demoK8s-2/k8s/k8s-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-gateway
  labels:
    env: prod
    app: main
    tier: backend
    owner: alex
spec:
  selector:
    matchLabels:
      project: gateway  #service with look for those PODS Labels
  template:
    metadata:
      labels:
        project: gateway
    spec:
      automountServiceAccountToken: true
      containers:
        - name: service-gateway
          image: nelson9291/gateway-test:1.0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: service-gateway
  labels:
    env: prod
spec:
  selector:
    project: gateway  #selecting PODS with those Labels
  ports:
    - name: app-gateway
      protocol: TCP
      port: 8080 #port loadBalancer
      targetPort: 8080 #port pod
