demoK8s-2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  ingressClassName: nginx
  rules:
    - host: alex.alex.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-gateway
                port:
                  number: 8080
